# mcp-binance-futures

./: .gitignore  PLAN.md  README.md  pyproject.toml
src/mcp_binance_futures/: client.py  models.py  safety.py  server.py
src/mcp_binance_futures/backtest/: data_loader.py  engine.py
src/mcp_binance_futures/tools/: account.py  backtest.py  market.py  risk.py  strategy.py  trading.py
