[project]
name = "mcp-binance-futures"
version = "0.1.0"
description = "MCP server for Binance USDS-margined futures trading"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-binance-futures = "mcp_binance_futures.server:main"
