[tool.poetry]
name = "mcp-binance-futures"
version = "0.1.0"
description = "MCP server for Binance USDS-margined futures trading"
authors = ["younjihoon"]
packages = [{include = "mcp_binance_futures", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mcp = {version = ">=1.0.0", extras = ["cli"]}
httpx = ">=0.27"
pydantic = ">=2.0"
python-dotenv = ">=1.0"
pandas = ">=2.0"
numpy = ">=1.24"

[tool.poetry.scripts]
mcp-binance-futures = "mcp_binance_futures.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
